# OsExt

./: README.md  build.gradle  settings.gradle
gradle/: libs.versions.toml
native-utils/: CMakeLists.txt  README.md  build.gradle
native-utils/src/androidTest/java/com/github/evermindzz/osext/utils/: NativeUtilsTest.java
native-utils/src/main/java/com/github/evermindzz/osext/utils/: NativeUtils.java  Stat.java
native-utils/src/main/native/osext/utils/: native_utils.c
osext-stat/: CMakeLists.txt  README.md  build.gradle
osext-stat/src/androidTest/java/com/github/evermindzz/osext/system/: ExceptionsTest.java  OsExtStatVfsTest.java
osext-stat/src/androidTest/native/osext/system/: exceptions_test.cpp
osext-stat/src/main/java/com/github/evermindzz/osext/system/: ErrnoException.java  Os.java  StructStatVfs.java
osext-stat/src/main/native/osext/: common.cpp  common.h  portability.h
osext-stat/src/main/native/osext/system/: exceptions.cpp  exceptions.h  os.cpp  os.h
osext-stat/src/test/java/com/github/evermindzz/osext/: ExampleUnitTest.java
placeholder/: README.md  build.gradle
